# generalized-n-body-simulation

./: CMakeLists.txt  README.md  bodies_cartesian.txt  bodies_spherical.txt  config.json  config.txt  go.mod
go/cmd/: main.go
go/internal/body/: acceleration.go  body.go  collision.go
go/internal/simulation/: config.go  coordinate.go  integration.go  parser.go  util.go
include/: bodies.h  integration.h  simulation.h
python/: plot.py
src/: bodies.cpp  integration.cpp  main.cpp  simulation.cpp  utils.cpp
